<resources>
    <string name="app_name">App Calculadora De Gorjeta</string>
    <string name="texto_dica_valor_conta">Digite o valor da conta ex: 39.50</string>
    <string name="texto_titulo_porcentagem_gorjeta">0%</string>
    <string name="texto_titulo_total_gorjeta">Gorjeta</string>
    <string name="texto_total_gorjeta">R$ 0.00</string>
    <string name="texto_titulo_total_conta">Total</string>
    <string name="texto_total_conta">R$ 0.00</string>
</resources>